--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -188,7 +188,7 @@ Distribution of association statistics in the region with the most $Q$-associate
 {Total} & 3,550 & 11,716 & 15,270\\
 \end{tabular}
 \caption{Number of statistically significant variants  passing the 1kGP strict mask per category. 
-Variants that are flagged by the 1kGP nested repeat mask file were analyzed separately. SNPs and INDELs were also analyzed separately. All four variant categories were subjected to a distinct FDR estimation.
+Variants that are flagged by the 1kGP nested repeat mask file were analyzed separately for FDR calculation. SNPs and INDELs were also analyzed separately.
 A total of 15,270 are statistically significantly associated to $Q$. 
 The number of variants included in the analysis for SNPs, SNPs in repeat regions, INDELs and INDELs in repeat regions are  19,846,786, 6,312,620, 1,770,315 and 586,342 respectively.}
 \label{sigTable}
